--- a/index.html
+++ b/index.html
@@ -7,37 +7,42 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <script src="assets/js/app.js" defer></script>
     <link rel="icon" type="image/x-icon" href="assets/img/icon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <section>
-      <div class="container">
-        <header class="header">
+      <div id="container">
+        <header id="header">
           <h1>POKÉDEX</h1>
           <p>Total: 1,025</p>
         </header>
 
-        <nav class="category-menu">
+        <nav id="category-menu">
           <button>All</button>
           <button>Grass</button>
           <button>Fire</button>
           <button>Water</button>
         </nav>
 
-        <div class="pokemon-list"></div>
+        <div id="pokemon-list"></div>
 
-        <div class="search-bar">
+        <div id="search-bar">
           <input type="text" placeholder="Search for a Pokémon" />
-          <button>Search</button>
+          <button><i class="fa-solid fa-arrow-up"></i></button>
         </div>
       </div>
 
-      <div class="showcase-container">
-        <div class="showcase">
+      <div id="showcase-container">
+        <div id="showcase">
           <img src="path-to-pokemon-image-1.png" alt="Pikachu" />
           <h2>Pikachu</h2>
-          <p>Electric</p>
-          <p>Height: 0.4m</p>
-          <p>Weight: 6kg</p>
+          <button></button>
         </div>
       </div>
     </section>
