--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>POKÉDEX</title>
     <link rel="stylesheet" href="assets/css/style.css" />
-    <script src="assets/js/app.js" defer></script>
     <link rel="icon" type="image/x-icon" href="assets/img/icon.ico" />
     <link
       rel="stylesheet"
@@ -33,18 +32,23 @@
         <div id="pokemon-list"></div>
 
         <div id="search-bar">
-          <input type="text" placeholder="Search for a Pokémon" />
-          <button><i class="fa-solid fa-arrow-up"></i></button>
+          <form action="search">
+            <input type="text" placeholder="Search for a Pokémon" />
+            <button type="submit"><i class="fa-solid fa-arrow-up"></i></button>
+          </form>
         </div>
       </div>
 
       <div id="showcase-container">
         <div id="showcase">
-          <img src="path-to-pokemon-image-1.png" alt="Pikachu" />
-          <h2>Pikachu</h2>
-          <button></button>
+          <div id="showcase-image">
+            <img src="" alt="selected-pokemon" />
+          </div>
+          <div id="info"></div>
+          <button id="details-button">DETAILS</button>
         </div>
       </div>
     </section>
+    <script src="assets/js/app.js" defer></script>
   </body>
 </html>
