--- a/index.html
+++ b/index.html
@@ -22,20 +22,15 @@
           <p>Total: 1,025</p>
         </header>
 
-        <nav id="category-menu">
-          <button>All</button>
-          <button>Grass</button>
-          <button>Fire</button>
-          <button>Water</button>
-        </nav>
-
-        <div id="pokemon-list"></div>
-
         <div id="search-bar">
           <form action="search">
             <input type="text" placeholder="Search for a Pokémon" />
             <button type="submit"><i class="fa-solid fa-arrow-up"></i></button>
           </form>
+        </div>
+
+        <div id="pokemon-list">
+          <button id="show-more-button">More</button>
         </div>
       </div>
 
@@ -45,7 +40,7 @@
             <img src="" alt="selected-pokemon" />
           </div>
           <div id="info"></div>
-          <button id="details-button">DETAILS</button>
+          <button id="details-button">Details</button>
         </div>
       </div>
     </section>
