--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div id="showcase-container">
         <div id="showcase">
           <div id="showcase-image">
-            <img src="" alt="selected-pokemon" />
+            <img src="assets/img/Pokeball.png" alt="selected-pokemon" />
           </div>
           <div id="info"></div>
           <button id="details-button">Details</button>
